// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFromHtml#parse renders <input/> with defaultValue 1`] = `
<input
  defaultValue="foo"
  type="text"
/>
`;

exports[`ReactFromHtml#parse renders <script/> with dangerouslySetInnerHTML 1`] = `
<script
  dangerouslySetInnerHTML={
    Object {
      "__html": "console.log('Hello <strong>React</strong> world!');",
    }
  }
/>
`;

exports[`ReactFromHtml#parse renders <style/> with dangerouslySetInnerHTML 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "/* Hello <strong>React</strong> world! */",
    }
  }
/>
`;

exports[`ReactFromHtml#parse renders <svg/> correctly 1`] = `
Array [
  "
          ",
  <svg
    height="60"
    version="1.1"
    width="60"
    xmlns="http://www.w3.org/2000/svg"
  >
    
            
    <rect
      height="60"
      width="60"
    />
    
            
    <text
      alignmentBaseline="central"
      style={Object {}}
      textAnchor="middle"
      x="30"
      y="30"
    >
      Hello, world!
    </text>
    
          
  </svg>,
  "
        ",
]
`;

exports[`ReactFromHtml#parse renders <textarea/> with defaultValue, instead of children 1`] = `
<textarea
  defaultValue="/* Hello <strong>React</strong> world! */"
/>
`;

exports[`ReactFromHtml#parse renders for as htmlFor 1`] = `
<label
  htmlFor="foo"
>
  <input
    id="foo"
  />
</label>
`;

exports[`ReactFromHtml#parse renders multiple blocks of HTML elements correctly 1`] = `
Array [
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
        ",
]
`;

exports[`ReactFromHtml#parse renders single block of HTML elements correctly 1`] = `
<p
  className="hello"
>
  Hello, 
  <strong>
    React
  </strong>
   world!
</p>
`;
